Fix crash on final page

--- a/doc/TODO
+++ b/doc/TODO
@@ -1,19 +1,39 @@
 0.0.8
 event loop (SDL, Haiku, GTK, cutsom, ...?)
 native win2, haiku builds
-start of automated testing framework
++ start of automated testing framework
 
 0.0.9
 margins
 word wrap on fb
 font selection (don't hardcode filename!)
 factory init/deinit vs new/delete; cleanup up in error paths; ...
-"N of M" for fd and ncurses paging
++ "N of M" for fd and ncurses paging
 paginate on demand, not entire book up-front
 
 0.1.0
 test build on multiple platforms
 survive purgatory.sh
+
+0.2
+    can navigate a single book via kobo touch screen
+
+0.3
+    can browse / select books via kobo touch screen
+
+0.4
+
+0.5
+
+0.6
+
+0.7
+
+0.8
+
+0.9
+
+1.0
 
 
 
@@ -29,7 +49,7 @@ device specific:
 workflow:
 
 layout:
-    - pagination
+    - pagination (0.1)
     - margins
     - FreeType:
         - integrate into RenderFd for real word wrap
@@ -71,6 +91,7 @@ per-user:
         - way to share metadata about the book (tweet / ... ?)
 
 features:
+    - search
     - bookmarks
     - annotations
     - dictionary
