Work on boot selector, Library, text rendering:
* First cut of a boot menu to select OcherBook vs Nickel
* Roughing in Library (paging through all books)
* Simplified centering text

--- a/README
+++ b/README
@@ -15,6 +15,6 @@ To get started, look in the doc directory, and/or "make help".
 To see what platforms are supported and to what degree, look in doc/platforms/.
 
 See also:
-OcherBook                   http://ccoffing.net/tech/proj/ocherbook
-Hacking the Kobo Touch      http://ccoffing.net/tech/embedded/kobo
+OcherBook                   http://usccoffings.net/tech/proj/ocherbook
+Hacking the Kobo Touch      http://usccoffings.net/tech/embedded/kobo
 
