--- a/README
+++ b/README
@@ -15,6 +15,6 @@ To get started, look in the doc directory, and/or "make help".
 To see what platforms are supported and to what degree, look in doc/platforms/.
 
 See also:
-OcherBook                   http://usccoffings.net/tech/proj/ocherbook
-Hacking the Kobo Touch      http://usccoffings.net/tech/embedded/kobo
+OcherBook                   http://usccoffings.net/clc/tech/ocherbook
+Hacking the Kobo Touch      http://usccoffings.net/clc/tech/embedded/kobo
 
