--- a/doc/TODO
+++ b/doc/TODO
@@ -1,3 +1,8 @@
+Shelf (sorted/filtered/stacked views) to populate HomeActivity's shortlist
+github issues....
+
+LibraryActivity
+    nav buttons - impl as Widgets; fade disabled
 make UI scalable to other res
     make SDL window resizable
 font size does not always pop correctly
@@ -35,7 +40,8 @@ clean up Path/File to be simpler, more posix-like
 first-run routine:
     select language
 
-low battery
+refresh battery
+low battery warning
 usb plugged in
 
 series
